[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.1.4", features = ["staking"] }
cosmwasm-schema = { version = "1.1.4" }
cw-storage-plus = "1.1.0"
cw-utils = "1.0.2"

thiserror = "1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.17.0"
